[package]
name = "elif"
version = "0.0.2" # change with html_root_url in lib.rs
edition = "2021"
authors = ["nomissbowling <nomissbowling@yahoo.co.jp>"]

description = "file and directory walker for Rust"
keywords = ["file", "directory", "walker", "recursive"]
categories = ["command-line-utilities", "command-line-interface", "development-tools"]
license = "MIT"

documentation = "https://docs.rs/elif/"
homepage = "https://crates.io/crates/elif"
repository = "https://github.com/nomissbowling/elif"

readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# fs_extra = "1.3"

# chrono = "0.4"
chrono = { version = "0.4", features = ["serde"] } # chrono with serde
chrono-tz = "0.8"
diesel = { version = "1.3", features = ["chrono"] } # chrono with diesel
